...
        readTimeInMinutes = 6
    )
)

val mockHealthyRecipes = listOf(
    HealthyRecipe(
        name = "Salada variada",
        imageRes = R.drawable.img_assorted_salad,
        calories = 221.15f,
        proteins = 15.13f,
        carbohydrates = 18.40f
    ),
    HealthyRecipe(
...
